frame/support/test/tests/construct_runtime_ui/missing_system_module.stderr
error: `System` pallet declaration is missing. Please add this line: `System: frame_system::{Pallet, Call, Storage, Config<T>, Event<T>},`
 --> tests/construct_runtime_ui/missing_system_module.rs:5:2
  |
5 | /     {
6 | |     }
  | |_____^
