frame/support/test/tests/construct_runtime_ui/missing_system_module.rs
use frame_support::construct_runtime;

construct_runtime! {
	pub struct Runtime
	{
	}
}

fn main() {}
